--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-cards",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://centrodph.github.io/react-cards",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
