--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "http://centrodph.github.io/react-cards",
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.3.1",
+    "jsonp": "^0.2.1",
     "node-sass-chokidar": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
